<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/header_view"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@color/brown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/header_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_clock"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/image_favorite"
        app:layout_constraintTop_toBottomOf="@id/header_view" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintLeft_toRightOf="@id/image_clock"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_minutes"
        app:layout_constraintLeft_toLeftOf="@id/image_clock"
        app:layout_constraintRight_toRightOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/image_clock" />

    <TextView
        android:id="@+id/text_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300_likes"
        app:layout_constraintLeft_toLeftOf="@id/image_favorite"
        app:layout_constraintRight_toRightOf="@id/image_favorite"
        app:layout_constraintTop_toBottomOf="@id/image_favorite" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/brown"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_like" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/infoCoffe"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSeparator" />

    <ImageView
        android:id="@+id/image_arrow_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients" />

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ingredients"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <ImageView
        android:id="@+id/image_arrow_ingredients_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients" />

    <ImageView
        android:id="@+id/image_arrow_ingredients_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_ingredients_1" />

    <ImageView
        android:id="@+id/image_arrow_ingredients_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arrow_ingredients_2" />

    <TextView
        android:id="@+id/dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dose_express"
        app:layout_constraintLeft_toLeftOf="@id/image_arrow_ingredients_1"
        app:layout_constraintRight_toRightOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/text_ingredients" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:layout_constraintLeft_toRightOf="@+id/image_arrow_ingredients_2"
        app:layout_constraintTop_toBottomOf="@id/dose"
        app:layout_constraintTop_toTopOf="@+id/image_arrow_ingredients_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        app:layout_constraintLeft_toRightOf="@+id/image_arrow_ingredients_3"
        app:layout_constraintTop_toBottomOf="@id/dose"
        app:layout_constraintTop_toTopOf="@+id/image_arrow_ingredients_3" />


</androidx.constraintlayout.widget.ConstraintLayout>